# VBFSimulation

./: .gitignore  README.md  TODO
VBF_Simulation/: dconfig
VBF_Simulation/Demos3/BasicDemo/: BasicDemo.cpp  BasicDemo.h  CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  GlutDemoApplication.cpp  GlutDemoApplication.h  main.cpp
VBF_Simulation/Demos3/BasicDemoConsole/: BasicDemoPhysicsSetup.cpp  BasicDemoPhysicsSetup.h  CMakeLists.txt  main.cpp  premake4.lua
VBF_Simulation/Demos3/BasicDemoCustomOpenGL2/: AppBasicDemo  BasicDemoPhysicsSetup.h  CMakeLists.txt  main.cpp  premake4.lua
VBF_Simulation/Demos3/ImportSTLDemo/: CMakeLists.txt  CommonGraphicsApp.h  CommonPhysicsSetup.h  CommonRigidBodySetup.h  GraphicsApp.cpp  GraphicsApp.hpp  GraphicsAppHelper.hpp  ImportSTLSetup.cpp  ImportSTLSetup.hpp  LoadMeshFromSTL.hpp  VBF_CommonPhysics.cpp  VBF_CommonPhysics.hpp  VBF_Cube.cpp  VBF_Cube.hpp  VBF_GraphicsBridge.hpp  VBF_InitializeSim.hpp  VBF_RigidBodies.cpp  VBF_RigidBodies.hpp  VBF_World.cpp  VBF_World.hpp  X11OpenGLWindow.cpp  X11OpenGLWindow.h  b3gWindowInterface.h  helper.hpp  main.cpp
VBF_Simulation/Demos3/ImportSTLDemo/MeshFiles/: Pilzteil%2_0x1_0.stl  Quadratprisma%1_6x1_0x1_0.stl  StufeFein150x30x100.stl  StufeFein150x30x200.stl  Stufenschikane%15_5x0_5.stl  Zylinder%1_7x1_0.stl
VBF_Simulation/Demos3/VehicleDemo/: CMakeLists.txt  VehicleDemo.cpp  VehicleDemo.h  main.cpp
VBF_Simulation/Demos3/gitTrial/: dummy.cpp
VBF_Simulation/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
VBF_Simulation/SimFiles/: .gitignore  CMakeLists.txt  CommonParameterInterface.h  ImportSTLSetup.cpp  ImportSTLSetup.hpp  InputFile  InputFile.txt  LoadMeshFromSTL.hpp  VBF_CommonPhysics.cpp  VBF_CommonPhysics.hpp  VBF_Cube.cpp  VBF_Cube.hpp  VBF_GraphicsBridge.hpp  VBF_ImportKinematicMesh.cpp  VBF_ImportKinematicMesh.hpp  VBF_InitializeSim.cpp  VBF_InitializeSim.hpp  VBF_KinematicBody.cpp  VBF_KinematicBody.hpp  VBF_RigidBodies.cpp  VBF_RigidBodies.hpp  VBF_Sphere.cpp  VBF_Sphere.hpp  VBF_StaticBody.cpp  VBF_StaticBody.hpp  VBF_Static_Cube.cpp  VBF_Static_Cube.hpp  VBF_Static_Sphere.cpp  VBF_Static_Sphere.hpp  VBF_World.cpp  VBF_World.hpp  helper.hpp  helper2.hpp  main.cpp  test.cpp  test_rigidBody.hpp
VBF_Simulation/SimFiles/MeshFiles/: StufeFein150x30x200.stl  Zylinder1_7x1_0.stl
VBF_Simulation/SimFiles/RigidBody/: CMakeLists.txt  LoadMeshFromSTL.hpp  VBF_DynamicBody.cpp  VBF_DynamicBody.hpp  VBF_Dynamic_Cube.cpp  VBF_Dynamic_Cube.hpp  VBF_Dynamic_Sphere.cpp  VBF_KinematicBody.cpp  VBF_KinematicBody.hpp  VBF_KinematicMesh.cpp  VBF_KinematicMesh.hpp  VBF_Kinematic_Cube.cpp  VBF_RigidBody.cpp  VBF_RigidBody.hpp  VBF_StaticBody.cpp  VBF_StaticBody.hpp  VBF_StaticMesh.cpp  VBF_StaticMesh.hpp  VBF_Static_Cube.hpp
VBF_Simulation/SimFiles/RigidBody/DynamicBodies/: CMakeLists.txt  VBF_DynamicBody.cpp  VBF_DynamicBody.hpp  VBF_DynamicMesh.cpp  VBF_DynamicMesh.hpp  VBF_Dynamic_Cube.cpp  VBF_Dynamic_Cube.hpp  VBF_Dynamic_Sphere.cpp  VBF_Dynamic_Sphere.hpp
VBF_Simulation/SimFiles/RigidBody/KinematicBodies/: CMakeLists.txt  VBF_KinematicBody.cpp  VBF_KinematicBody.hpp  VBF_KinematicMesh.cpp  VBF_KinematicMesh.hpp  VBF_Kinematic_Cube.cpp  VBF_Kinematic_Cube.hpp  VBF_Kinematic_Sphere.cpp  VBF_Kinematic_Sphere.hpp
VBF_Simulation/SimFiles/RigidBody/StaticBodies/: CMakeLists.txt  VBF_StaticBody.hpp  VBF_StaticMesh.hpp  VBF_Static_Cube.cpp  VBF_Static_Cube.hpp  VBF_Static_Sphere.cpp  VBF_Static_Sphere.hpp
VBF_Simulation/SimFiles/cmake/: UseDoxygenDoc.cmake
VBF_Simulation/SimFiles/docs/: Doxyfile.in
VBF_Simulation/SimFiles/unit_tests/: CMakeLists.txt  VBFSimLoopTest.hpp  VBFWorldTest.cpp  main_test.cpp
VBF_Simulation/SimFiles/vbf_exe/: CMakeLists.txt  main.cpp
VBF_Simulation/SimFiles/vbf_source/: CMakeLists.txt  ImportSTLSetup.cpp  ImportSTLSetup.hpp  VBF_CommonPhysics.cpp  VBF_CommonPhysics.hpp  VBF_GraphicsBridge.hpp  VBF_InitializeSim.cpp  VBF_InitializeSim.hpp  VBF_ReadInputData.cpp  VBF_ReadInputData.hpp  VBF_SimLoop.hpp  VBF_World.cpp  VBF_World.hpp  helper.hpp  helper2.hpp  test_rigidBody.hpp
VBF_Simulation/SimFiles/vbf_source/RigidBody/: CMakeLists.txt  LoadMeshFromSTL.hpp  VBF_RigidBody.cpp  VBF_RigidBody.hpp
VBF_Simulation/SimFiles/vbf_source/RigidBody/DynamicBodies/: CMakeLists.txt  VBF_DynamicBody.cpp  VBF_DynamicBody.hpp  VBF_DynamicMesh.cpp  VBF_DynamicMesh.hpp  VBF_Dynamic_Cube.cpp  VBF_Dynamic_Cube.hpp  VBF_Dynamic_Cylinder.cpp  VBF_Dynamic_Cylinder.hpp  VBF_Dynamic_Sphere.cpp  VBF_Dynamic_Sphere.hpp
VBF_Simulation/SimFiles/vbf_source/RigidBody/KinematicBodies/: CMakeLists.txt  VBF_KinematicBody.cpp  VBF_KinematicBody.hpp  VBF_KinematicMesh.cpp  VBF_KinematicMesh.hpp  VBF_Kinematic_Cube.cpp  VBF_Kinematic_Cube.hpp  VBF_Kinematic_Cylinder.cpp  VBF_Kinematic_Cylinder.hpp  VBF_Kinematic_Sphere.cpp  VBF_Kinematic_Sphere.hpp
VBF_Simulation/SimFiles/vbf_source/RigidBody/StaticBodies/: CMakeLists.txt  VBF_StaticBody.cpp  VBF_StaticBody.hpp  VBF_StaticMesh.cpp  VBF_StaticMesh.hpp  VBF_Static_Cube.cpp  VBF_Static_Cube.hpp  VBF_Static_Cylinder.cpp  VBF_Static_Cylinder.hpp  VBF_Static_Ground.cpp  VBF_Static_Ground.hpp  VBF_Static_Sphere.cpp  VBF_Static_Sphere.hpp
